--- a/main.html
+++ b/main.html
@@ -8,6 +8,39 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post">
+		<label for="name">Name</label><br>
+		<input id="name" type="Text" required ><br>
+		
+		<label for="email">Email</label><br>
+		<input id="email" type="Email" required><br>
+		
+		<p>Gender</p>
+		<input id="male" name="gender" type="Radio" required>
+		<label for="male">Male</label><br>
+		<input id="female" name="gender" type="Radio" required>
+		<label for="female">Female</label><br>
+		
+		<label for="cars">Car Brands</label><br>
+		<select id="cars" >
+			<option>BMW</option>
+			<option>Audi</option>
+			<option>Mercedez</option>
+		</select>
+		
+		<label for="carage">Car Age</label><br>
+		<input id="carage" type="Number" required><br>
+		
+		<label for="dop">Date of Purchase</label><br>
+		<input id="dop" type="Date" required><br>
+		
+		<label for="password">Password</label><br>
+		<input id="password" type="Password" required><br>
+
+		
+		<input type="submit" value="submit">
+		
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
