--- a/main.html
+++ b/main.html
@@ -38,7 +38,7 @@
 		<input id="password" type="Password" required><br>
 
 		
-		<input type="submit" value="submit">
+		<button type="submit">Submit</button>
 		
 	</form>
     <script type="text/javascript" src="./script.js">
